# co-grading

./: .env  .gitignore  .readthedocs.yaml  SETUP_GUIDE.md  readme.md  requirements.txt  tatus  temp_file.json
.github/ISSUE_TEMPLATE/: ticket-template.md
.github/workflows/: ollama.yml  python-app.yml  python-test.yml
app/autograding/: __init__.py  components.py  evaluation.py  feedback_prompts.py  grading_handler.py  score.py
app/autograding/agents/: __init__.py  grading_agent.py  instruction_agent.py  rubric_agent.py
app/autograding/autograde_assignment/: __init__.py  (+1 more)
app/web/: __init__.py  api.py
backend/: .env  .env.test  .gitignore  requirements.txt  tasks.py  test_openrouter.py
backend/tests/: README.md
chrome-extension/: .eslintrc  .gitignore  LICENSE  README.md  components.json  manifest.dev.json  manifest.json  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
crewai/: README.md  pyproject.toml  report.md
crewai/src/instructorcrew/: crew.py  main.py
crewai/src/instructorcrew/config/: agents.yaml  tasks.yaml
frontend/: README.md  manifest.json  service-worker-loader.js
frontend/.vite/: manifest.json
frontend/assets/: CanvasService-BNUUX2rn.js  GradingRepository-DZXIIiP0.js  Textarea-DcKjW1V4.js  actions-DCwID940.js  createLucideIcon-CRgOeeIc.css  createLucideIcon-Ck8SqCQ8.js  grading-BF2zApe_.js  index.html-BVdl0Dns.js  index.html-CNaxAM9G.js  index.ts-B-Im_HpK.js  index.tsx-Dsd8HkZn.js  index.tsx-loader-DYiAg6UP.js  manifest-D274No9N.js
tests/integration/: conftest.py  test_integration_slow.py
(+152 files in other folders)
