[project]
name = "instructorcrew"
version = "0.1.0"
description = "InstructorCrew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.130.0,<1.0.0"
]

[project.scripts]
instructorcrew = "instructorcrew.main:run"
run_crew = "instructorcrew.main:run"
train = "instructorcrew.main:train"
replay = "instructorcrew.main:replay"
test = "instructorcrew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
